--- a/index.html
+++ b/index.html
@@ -6,40 +6,32 @@
 </head>
 <body>
 This page is for manual testing of apiCheck.js. Just to give a little human aspect to developing the library :-)
-<script src="dist/apiCheck.js"></script>
+<script src="dist/api-check.js"></script>
 <script>
 
+  // just... yeah...
+  function require() {
+    return apiCheck;
+  }
 
-  /*
-  apiCheck.config.verbose = true;
-  var optionsCheck = apiCheck.shape({
-    foo: apiCheck.shape({
-      foo1: apiCheck.string.optional,
-      foo2: apiCheck.number
-    }),
-    bar: apiCheck.func.withProperties({
-      bar1: apiCheck.string.optional,
-      bar2: apiCheck.bool
-    }),
-    foobar: apiCheck.shape({
-      foobar1: apiCheck.string.optional,
-      foobar2: apiCheck.instanceOf(Date)
-    }).optional
+  // From README
+
+  var myApiCheck = require('api-check')({
+    /* config options */
+    output: {
+      prefix: 'app/lib Name',
+      suffix: 'Good luck!',
+      docsBaseUrl: 'http://www.example.com/error-docs#'
+    },
+    verbose: false
+  }, {
+    /* custom checkers if you wanna */
   });
-  var myOptions = {
-    foo: {
-      foo1: 'specified',
-      foo2: 'something'
-    }
-  };
-  (function(a) {
-    var apiTypes = apiCheck(optionsCheck, arguments).apiTypes;
-    console.log(JSON.stringify(apiTypes, null, 2));
-  })(myOptions);
+
   // given we have a function like this:
   function foo(bar, foobar) {
-    // we can define our api as the first argument to apiCheck.warn
-    apiCheck.warn([apiCheck.number, apiCheck.arrayOf(apiCheck.string)], arguments);
+    // we can define our api as the first argument to myApiCheck.warn
+    myApiCheck.warn([myApiCheck.number, myApiCheck.arrayOf(myApiCheck.string)], arguments);
     // do stuff
   }
   // the function above can be called like so:
@@ -49,29 +41,42 @@ This page is for manual testing of apiCheck.js. Just to give a little human aspe
   foo('whatever', false);
 
 
-  // here's something a little more complex
+  // here's something a little more complex (this is what's in the screenshot and [the demo](http://jsbin.com/hibocu/edit?js,console,output))
+  var myCheck = require('api-check')({
+    output: {
+      prefix: 'myApp',
+      suffix: 'see docs -->',
+      docsBaseUrl: 'http://example.com/error-descriptions#'
+    }
+  });
   function doSomething(person, options, callback) {
-    apiCheck.warn([ // you can also do apiCheck.throw to throw an exception
-      apiCheck.shape({
-        name: apiCheck.shape({
-          first: apiCheck.string,
-          last: apiCheck.string
+    myCheck.warn([ // you can also do myCheck.throw to throw an exception
+      myCheck.shape({
+        name: myCheck.shape({
+          first: myCheck.string,
+          last: myCheck.string
         }),
-        age: apiCheck.number,
-        isOld: apiCheck.bool,
-        walk: apiCheck.func,
-        childrenNames: apiCheck.arrayOf(apiCheck.string).optional
+        age: myCheck.number,
+        isOld: myCheck.bool,
+        walk: myCheck.func,
+        ipAddress: function(val, name, location) {
+          if (!/(\d{1,3}\.){3}\d{1,3}/.test(val)) {
+            return myCheck.utils.getError(name, location, 'ipAddress');
+          }
+        },
+        childrenNames: myCheck.arrayOf(myCheck.string).optional
       }),
-      apiCheck.any.optional,
-      apiCheck.func
+      myCheck.any.optional,
+      myCheck.func
     ], arguments, {
-      prefix: 'doSomething'
+      prefix: 'doSomething',
+      suffix: 'Good luck!',
+      urlSuffix: 'dosomething-api-check-failure'
     });
 
     // do stuff
   }
 
-  // the function above can be called in the following ways:
   var person = {
     name: {
       first: 'Matt',
@@ -79,18 +84,31 @@ This page is for manual testing of apiCheck.js. Just to give a little human aspe
     },
     age: 27,
     isOld: false,
+    ipAddress: '127.0.0.1',
     walk: function() {}
   };
   function callback() {}
   var options = 'whatever I want because it is an "any" type';
+
+  console.log('Successful call');
   doSomething(person, options, callback);
+
+  console.log('Successful call (without options)');
   doSomething(person, callback); // <-- options is optional
+
+  console.log('Failed call (without person)');
   doSomething(callback); // <-- this would fail because person is not optional
 
+  person.ipAddress = 'Invalid IP Address!!!';
+
+  console.log('Failed call (invalid ip address)');
+  doSomething(person, options, callback); // <-- this would fail because the ipAddress checker would fail
 
   // if you only wish to check the first argument to a function, you don't need to supply an array.
+
+  var libCheck = apiCheck(); // you don't HAVE to pass anything if you don't want to.
   function bar(a) {
-    var errorMessage = apiCheck(apiCheck.string, arguments);
+    var errorMessage = libCheck(apiCheck.string, arguments);
     if (!errorMessage) {
       // success
     } else if (typeof errorMessage === 'string') {
@@ -98,7 +116,33 @@ This page is for manual testing of apiCheck.js. Just to give a little human aspe
     }
   }
   bar('hello!'); // <-- success!
-  */
+
+
+
+  // Further down in README
+
+  var myCheck2 = require('api-check')({
+    output: {prefix: 'myCheck2'}
+  });
+
+  function ipAddressChecker(val, name, location) {
+    if (!/(\d{1,3}\.){3}\d{1,3}/.test(val)) {
+      return apiCheck.utils.getError(name, location, ipAddressChecker.type);
+    }
+  }
+  ipAddressChecker.type = 'ipAddressString';
+
+  function foo2(string, ipAddress) {
+    myCheck2.warn([
+      myCheck2.string,
+      ipAddressChecker
+    ], arguments);
+  }
+
+
+  foo2('hello', 'not-an-ip-address');
+
+
 </script>
 </body>
 </html>
